# stim-crates

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: guard.yml
crates/platform/: Cargo.toml
crates/platform/src/: env.rs  lib.rs  lock.rs  network.rs  os.rs  paths.rs  process.rs
crates/platform/tests/: paths.rs  process.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: identity.rs  inspect.rs  layout.rs  lib.rs  process.rs  ready.rs  registry.rs  runtime.rs  stamp.rs  stdout.rs
crates/sidecar/src/io/: runtime.rs  stdout.rs
crates/sidecar/src/registry/: manifest.rs  spawn.rs
crates/sidecar/src/registry/spawn/: ready_wait.rs
crates/sidecar/tests/: identity.rs  inspect.rs  layout.rs  process.rs  ready.rs  registry.rs  runtime.rs  stamp.rs  stdout.rs
