[package]
name = "stim-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stim-platform.workspace = true
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time", "sync"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util", "time"] }
